--- a/bernoulli/src/Makefile
+++ b/bernoulli/src/Makefile
@@ -9,7 +9,9 @@ io.o: io.c
 	$(GCC) -o $@ -c $<
 scan.o: scan.c
 	$(GCC) $(OMPFLAGS) -o $@ -c $<
-Adv4DScanBer: Adv4DScanBer.o io.o scan.o
+mc.o: mc.c
+	$(GCC) $(OMPFLAGS) -o $@ -c $< -std=c++11
+Adv4DScanBer: Adv4DScanBer.o io.o scan.o mc.o
 	$(GCC) $(OMPFLAGS) -o ../$@ $+
 clean:
 	rm -f *.o ../Adv4DScanBer
